@@ -25,7 +25,8 @@ kernel/filesystem/ff.c                                                     \
 kernel/filesystem/diskio.cpp                                               \
 util/util.cpp                                                              \
 util/version.cpp                                                           \
-util/crc16.cpp
+util/crc16.cpp                                                             \
+util/lcd44780.cpp
 
 ## Add the architecture dependand sources to the list of files to build.
 ## ARCH_SRC will contain different source files depending on which
